--- a/Doflake V1.0.2/_config.yml
+++ b/Doflake V1.0.2/_config.yml
@@ -37,7 +37,7 @@ basic:
 # **************************|*********************************
   info:
    title: Doflake
-   favicon: https://cdn.jsdelivr.net/gh/doflake/Picture/Favicon/Favicon-1.png
+   favicon: https://cdn.jsdelivr.net/gh/doflake/Picture/Favicon/1.jpg
    author: Doflake
 
 ## Menu 导航栏
@@ -72,7 +72,7 @@ basic:
 #     size:                 |   图片大小
 # **************************|*********************************
   background:
-   link: https://cdn.jsdelivr.net/gh/doflake/Picture/Background/2.jpg
+   link: https://cdn.jsdelivr.net/gh/doflake/Picture/Background/3.jpg
    layout:
      repeat: no-repeat
      attachment: fixed
@@ -105,6 +105,7 @@ layout:
 #     top:                  |   上边距
 #     right:                |   右边距
 #     bottom:               |   下边距
+#     color:                |   底色
 #   border:                 |   边框样式
 #     radius:               |   文章圆角
 #   margin:                 |   边距
@@ -120,6 +121,9 @@ layout:
       top: auto
       right: auto
       bottom: auto
+      color: 
+        default: 255,255,255,0.8
+        hover: 255,255,255,0.9
     border:
       radius: 10px
     margin:
@@ -160,5 +164,5 @@ meta:
       fill: "#000000"
       stroke_width: 3px
       time: 8
-    
+
 # -------------------------------------------------------------------------------------------------- < End Meta >
